# lookup.el

./: .gitignore  Makefile.am  README  acinclude.m4  configure.in
CVS/: Root
comp/: oxford.el
lisp/: .cvsignore  Makefile.am  daijisen.el  evi.el  lookup-cache.el  lookup-compile.el  lookup-content.el  lookup-glyph.el  lookup-history.el  lookup-kanji.el  lookup-modules.el  lookup-search.el  lookup-select.el  lookup-summary.el  lookup-text.el  lookup-types.el  lookup-utils.el  lookup-vars.el  lookup-vars.el.in  lookup.el  ndeb-binary.el  ndeb-bitmap.el  ndeb-image.el  ndeb.el  ndlatin.el  ndmisc.el  ndspell.el  ndtp.el  sdicf.el  stem-english.el  support-chujiten.el  support-colloc.el  support-jargon.el  support-loaddef.el  support-mypaedia.el  support-oxford.el  support-srd-fpw.el  support-srd.el  support-vera.el
texi/: Makefile.am  lookup.texi  texi2info.el
web/: index.scm  index.shtml  index.tpl.html
web/ja/: index.scm  index.shtml  index.tpl.html
web/ja/eblook/: index.html
web/ja/howto/: gaiji.scm  index.scm  os2-bitmap.scm
web/ja/info/: download.scm  screenshot.scm  tips.scm  tips.shtml  tips.tpl.html
web/ja/lists/: index.scm
