# 
# $Id$

AC_INIT(lisp/lookup.el)
AM_INIT_AUTOMAKE(lookup, `grep 'defconst lookup-version' lisp/lookup.el | sed 's/.*"\(.*\)".*/\1/'`)
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_ARG_WITH(emacs,
              [  --with-emacs=EMACS	  compile with EMACS EMACS=emacs, xemacs...],
              [EMACS=$withval],
              [with_emacs='yes'])

AM_PATH_LISPDIR

AC_OUTPUT(Makefile lisp/Makefile)
